--- a/register.html
+++ b/register.html
@@ -10,70 +10,72 @@
 </head>
 <body>
     <h1 class="title">Petsgram</h1>
-    <main class="main">
+    <main class="register-main">
         <div class="img-container">
             <img class="dog-img" src="./assets/animals.jpg" alt="">
         </div>
-        <div class="login-page">
-            <h2 class="subtitle">Registro</h2>
-            <form action="" class="form">
-                <div class="user-mail-container">
-                    <div class="username">
-                        <p>Usermane</p>
-                        <input type="text">
+        <div class="register-page">
+            <form class="register-form">
+                <div class="register-subtitle-container">
+                    <h2 class="subtitle">Registro</h2>
+                </div>
+                <div class="user-email-container">
+                    <div class="register-user-container">
+                        <p>Username</p>
+                        <input type="text" name="" id="">
                     </div>
-                    <div class="correo">
+                    <div class="register-email-container">
                         <p>Email</p>
-                        <input type="text">
+                        <input type="email" name="" id="">
                     </div>
                 </div>
-                <div class="password-container">
-                    <div class="contra">
+                <div class="password-confirm-password-container">
+                    <div class="register-password-container">
                         <p>Contraseña</p>
-                        <input type="password">
+                        <input type="password" name="" id="">
                     </div>
-                    <div class="confirmar-contra">
-                        <p>Confirmar contraseña</p>
-                        <input type="password">
+                    <div class="register-confirm-password-container">
+                        <p>Confrimar Contraseña</p>
+                        <input type="password" name="" id="">
                     </div>
                 </div>
-                <div class="full-name-container">
-                    <div class="nombre">
+                <div class="name-lastname-container">
+                    <div class="register-name-container">
                         <p>Nombres</p>
-                        <input type="text">
+                        <input type="text" name="" id="">
                     </div>
-                    <div class="apellido">
+                    <div class="register-lastname-container">
                         <p>Apellidos</p>
-                        <input type="text">
+                        <input type="text" name="" id="">
                     </div>
                 </div>
-                <div class="buttons">
-                    <button class="login-btn">Login</button>
-                    <button class="register-btn">Register</button>
+                <div class="register-buttons-container">
+                    <button class="register-login-btn">LogIn</button>
+                    <button class="register-register-btn">Register</button>
                 </div>
-                <p class="recover-password">Recordar Contraseña</p>
+                <a href="#" class="register-recover-password">Recordar Contraseña</a>
             </form>
         </div>
     </main>
-    <footer>
+    <footer class="footer">
         <div class="link-container">
-            <a href="#">Link</a>
-            <a href="#">Link</a>
-            <a href="#">Link</a>
-            <a href="#">Link</a>
-            <a href="#">Link</a>
-            <a href="#">Link</a>
-            <a href="#">Link</a>
-            <a href="#">Link</a>
-            <a href="#">Link</a>
-            <a href="#">Link</a>
-            <a href="#">Link</a>
-            <a href="#">Link</a>
-            <a href="#">Link</a>
+            <a class="footer-link" href="#">Información</a>
+            <a class="footer-link" href="#">Blog</a>
+            <a class="footer-link" href="#">Empleo</a>
+            <a class="footer-link" href="#">Ayuda</a>
+            <a class="footer-link" href="#">API</a>
+            <a class="footer-link" href="#">Privacidad</a>
+            <a class="footer-link" href="#">Condiciones</a>
+            <a class="footer-link" href="#">Cuentas destacadas</a>
+            <a class="footer-link" href="#">Hashtags</a>
+            <a class="footer-link" href="#">Ubicaciones</a>
+            <a class="footer-link" href="#">Petsgram Lite</a>
+            <a class="footer-link" href="#">Subir contactos</a>
+            <a class="footer-link" href="#">Ayuda</a>
         </div>
         <div class="link-container-2">
-            <a href="">Link2</a>
-            <a href="">Link2</a>
+            <a class="footer-link" href="">Español</a>
+            <a class="footer-link" href="">© 2022 Petsgram from UTB</a>
         </div>
     </footer>
 </body>
